# epigenetic-gol-v1

./: .gitignore  README.md  benchmark.py  evolution.py  evolve_species.py  experiments.py  gif_files.py  phenotype_program.py  rebuild_output.py  run_experiments.py  summarize_results.py  trace_species_evolution.py  visualize_results.py
kernel/: CMakeLists.txt  cuda_utils.cuh  development.cu  development.cuh  environment.h  fitness.cu  fitness.cuh  genotype.cu  genotype.cuh  gol_simulation.cu  gol_simulation.cuh  gol_simulation.h  interpreter.cu  interpreter.cuh  phenotype_program.h  python_module.cc  reproduction.cu  reproduction.h  selection.cu  selection.h  simulator.cu  simulator.h
tests/: test_case.py  test_development.py  test_fitness.py  test_phenotype_program.py  test_reproduction.py  test_simulation.py
